bug fix--Extra White Space from Website

--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -1,10 +1,8 @@
 .nav-wrapper {
   width: 100%;
   height: 9vh;
-  transform: translateZ(0);
-  /* -webkit-transform: translateZ(1) !important; */
-  -webkit-transform: none !important;
-transform: none !important;
+  /* transform: translateZ(0);
+  -webkit-transform: translateZ(0) !important; */
   position: fixed;
   top: 0px;
   left: 0px;
@@ -155,8 +153,8 @@ transform: none !important;
     top: 9vh;
     /* text-align: center;
         align-items: center; */
-    right: -40%;
-    /* right: 1.6rem; */
+    /* right: -40%; */
+    right: 1.6rem;
     opacity: 0;
     transition: all 0.5s ease;
     /* display: none; */
