--- a/src/components/project2.css
+++ b/src/components/project2.css
@@ -1,8 +1,14 @@
-#Project h2 {
+#Project  {
   /* text-align: center;
   margin-top: 2rem;
-  padding: 10rem 10rem; */
-  font-family: "Varela Round", sans-serif;
+  padding: 10rem 10rem;
+  background: #470fe0 !important;
+  font-family: "Varela Round", sans-serif; */
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden; 
 }
 .project-container.dnNJYD {
   list-style: none;
@@ -225,7 +231,7 @@
 
 }
 
-@media (max-width: 768px) {
+@media (max-width: 800px) {
   .huabVa:hover, .huabVa:focus {
     box-shadow: 0 20px 30px -15px rgba(0, 0, 0, 0.7);;
 }
