--- a/src/components/skill.css
+++ b/src/components/skill.css
@@ -3,6 +3,11 @@
     font-family: "Varela Round", sans-serif;
     margin-top: 4rem;
     /* height: 100vh; */
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
 }
 
 .skill{
